tests/errors/macro/parser_unexpected_elif.c
int a = 1;
#elif a = 0;

int main()
{
	assert(a, "recovery is not working");
	return 0;
}
